instructions.Instructions.scala.error
Compilation error:
Instructions:10: error: not found: value foward
foward(2)
^